--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,40 +19,6 @@ services:
     image: arg_production_filter:latest
     links:
     - rabbitmq
-  arg_production_filter_1:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=arg_production_filter_1
-    image: arg_production_filter:latest
-    links:
-    - rabbitmq
-  arg_production_filter_2:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=arg_production_filter_2
-    image: arg_production_filter:latest
-    links:
-    - rabbitmq
   best_and_worst_ratings_aggregator:
     build:
       context: .
@@ -72,29 +38,30 @@ services:
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
     - rabbitmq
-  client_2:
+  client_1:
     build:
       context: .
       dockerfile: client/client.dockerfile
-    container_name: client_2
+    container_name: client_1
     depends_on:
       client_decodifier:
         condition: service_healthy
-    - monitor
+      monitor:
+        condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
-    - CLIENT_ID=2
+    - CLIENT_ID=1
     - MONITOR_HOST=monitor
     - MONITOR_PORT=50001
     - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=client_2
+    - SERVICE_NAME=client_1
     volumes:
-    - ./files/long/client_2/movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/long/client_2/credits.csv:/root/files/credits.csv
-    - ./files/long/client_2/ratings.csv:/root/files/ratings.csv
-    - ./results/long/client_2/results.json:/root/results/results.json
+    - ./files/short//movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/short//credits.csv:/root/files/credits.csv
+    - ./files/short//ratings.csv:/root/files/ratings.csv
+    - ./results/short//results.json:/root/results/results.json
   client_decodifier:
     build:
       context: .
@@ -106,16 +73,16 @@ services:
         condition: service_healthy
       worker:
         condition: service_started
-    healthcheck:
-      interval: 5s
-      retries: 10
-      test: netstat -ltn | grep -c 5000
-      timeout: 2s
     environment:
     - MONITOR_HOST=monitor
     - MONITOR_PORT=50001
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=client_decodifier
+    healthcheck:
+      interval: 5s
+      retries: 10
+      test: netstat -ltn | grep -c 5000
+      timeout: 2s
     ports:
     - 50000:50000
   credits_joiner:
@@ -135,40 +102,6 @@ services:
     - MONITOR_PORT=50001
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=credits_joiner
-    image: credits_joiner:latest
-    links:
-    - rabbitmq
-  credits_joiner_1:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=credits_joiner_1
-    image: credits_joiner:latest
-    links:
-    - rabbitmq
-  credits_joiner_2:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=credits_joiner_2
     image: credits_joiner:latest
     links:
     - rabbitmq
@@ -192,40 +125,6 @@ services:
     image: esp_production_filter:latest
     links:
     - rabbitmq
-  esp_production_filter_1:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=esp_production_filter_1
-    image: esp_production_filter:latest
-    links:
-    - rabbitmq
-  esp_production_filter_2:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=esp_production_filter_2
-    image: esp_production_filter:latest
-    links:
-    - rabbitmq
   main_movie_filter:
     build:
       context: .
@@ -243,40 +142,6 @@ services:
     - MONITOR_PORT=50001
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=main_movie_filter
-    image: main_movie_filter:latest
-    links:
-    - rabbitmq
-  main_movie_filter_1:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=main_movie_filter_1
-    image: main_movie_filter:latest
-    links:
-    - rabbitmq
-  main_movie_filter_2:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=main_movie_filter_2
     image: main_movie_filter:latest
     links:
     - rabbitmq
@@ -313,40 +178,6 @@ services:
     image: no_colab_productions_filter:latest
     links:
     - rabbitmq
-  no_colab_productions_filter_1:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=no_colab_productions_filter_1
-    image: no_colab_productions_filter:latest
-    links:
-    - rabbitmq
-  no_colab_productions_filter_2:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=no_colab_productions_filter_2
-    image: no_colab_productions_filter:latest
-    links:
-    - rabbitmq
   rabbitmq:
     build:
       context: ./rabbitmq
@@ -377,40 +208,6 @@ services:
     - MONITOR_PORT=50001
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=ratings_joiner
-    image: ratings_joiner:latest
-    links:
-    - rabbitmq
-  ratings_joiner_1:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=ratings_joiner_1
-    image: ratings_joiner:latest
-    links:
-    - rabbitmq
-  ratings_joiner_2:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=ratings_joiner_2
     image: ratings_joiner:latest
     links:
     - rabbitmq
@@ -450,40 +247,6 @@ services:
     - MONITOR_PORT=50001
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=sentiment_filter
-    image: sentiment_filter:latest
-    links:
-    - rabbitmq
-  sentiment_filter_1:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=sentiment_filter_1
-    image: sentiment_filter:latest
-    links:
-    - rabbitmq
-  sentiment_filter_2:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=sentiment_filter_2
     image: sentiment_filter:latest
     links:
     - rabbitmq
@@ -580,40 +343,6 @@ services:
     - MONITOR_PORT=50001
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_filter
-    image: twentieth_century_filter:latest
-    links:
-    - rabbitmq
-  twentieth_century_filter_1:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=twentieth_century_filter_1
-    image: twentieth_century_filter:latest
-    links:
-    - rabbitmq
-  twentieth_century_filter_2:
-    depends_on:
-      monitor:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-      worker:
-        condition: service_started
-    environment:
-    - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=twentieth_century_filter_2
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
