--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,11 +48,11 @@ services:
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
     - rabbitmq
-  client_2:
+  client_1:
     build:
       context: .
       dockerfile: client/client.dockerfile
-    container_name: client_2
+    container_name: client_1
     depends_on:
       client_decodifier:
         condition: service_healthy
@@ -66,16 +66,16 @@ services:
     - PYTHONUNBUFFERED=1
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
-    - CLIENT_ID=2
+    - CLIENT_ID=1
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=client_2
+    - SERVICE_NAME=client_1
     volumes:
-    - ./files/long/client_2/movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/long/client_2/credits.csv:/root/files/credits.csv
-    - ./files/long/client_2/ratings.csv:/root/files/ratings.csv
-    - ./results/long/client_2/results.json:/root/results/results.json
+    - ./files/long/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/long/credits.csv:/root/files/credits.csv
+    - ./files/long/ratings.csv:/root/files/ratings.csv
+    - ./results/long/results.json:/root/results/results.json
   client_decodifier:
     build:
       context: .
@@ -153,6 +153,27 @@ services:
     image: esp_production_filter:latest
     links:
     - rabbitmq
+  esp_production_filter_1:
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=esp_production_filter_1
+    image: esp_production_filter:latest
+    links:
+    - rabbitmq
   main_movie_filter:
     build:
       context: .
@@ -178,6 +199,27 @@ services:
     image: main_movie_filter:latest
     links:
     - rabbitmq
+  main_movie_filter_1:
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=main_movie_filter_1
+    image: main_movie_filter:latest
+    links:
+    - rabbitmq
   monitor_1:
     build:
       context: .
@@ -190,6 +232,7 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=1
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
     ports:
     - 50001:50001
     - 50011:50011
@@ -207,6 +250,7 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=2
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
     ports:
     - 50002:50002
     - 50012:50012
@@ -224,6 +268,7 @@ services:
     - HEARTBEAT_TIMEOUT=15000
     - MONITOR_NODE_ID=3
     - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter,twentieth_century_filter_1,arg_production_filter,credits_joiner,ratings_joiner,main_movie_filter,main_movie_filter_1,esp_production_filter,esp_production_filter_1,no_colab_productions_filter,sentiment_filter,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator,sentiment_aggregator
     ports:
     - 50003:50003
     - 50013:50013
@@ -246,6 +291,7 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
@@ -308,6 +354,7 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
     - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
@@ -457,6 +504,27 @@ services:
     - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_filter
+    image: twentieth_century_filter:latest
+    links:
+    - rabbitmq
+  twentieth_century_filter_1:
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_filter_1
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
