--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,9 @@ monitors:
   count: 3
   base_port: 50000
   cluster_base_port: 50010
-  heartbeat_interval: 5000      # 5 segundos
-  heartbeat_timeout: 15000      # 15 segundos
-  election_timeout: 10000       # 10 segundos
+  heartbeat_interval: 100      # 100 milisegundos
+  heartbeat_timeout: 3000      # 3 segundos
+  election_timeout: 1000       # 1 segundo
 
 clients:
   - id: 1
