--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -14,10 +18,33 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=arg_production_filter_1
+    image: arg_production_filter:latest
+    links:
+    - rabbitmq
+  arg_production_filter_2:
+    container_name: arg_production_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=arg_production_filter_2
     image: arg_production_filter:latest
     links:
     - rabbitmq
@@ -29,6 +56,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -36,8 +67,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
@@ -52,13 +83,17 @@ services:
         condition: service_healthy
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
     - CLIENT_ID=1
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=client_1
     volumes:
@@ -74,13 +109,17 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
         condition: service_started
     environment:
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=client_decodifier
     healthcheck:
@@ -98,6 +137,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -106,10 +149,33 @@ services:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
     - JOINER_INSTANCE_ID=credits-1
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=credits_joiner_1
+    image: credits_joiner:latest
+    links:
+    - rabbitmq
+  credits_joiner_2:
+    container_name: credits_joiner_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=credits_joiner_2
     image: credits_joiner:latest
     links:
     - rabbitmq
@@ -121,6 +187,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -128,10 +198,33 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=esp_production_filter_1
+    image: esp_production_filter:latest
+    links:
+    - rabbitmq
+  esp_production_filter_2:
+    container_name: esp_production_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=esp_production_filter_2
     image: esp_production_filter:latest
     links:
     - rabbitmq
@@ -143,6 +236,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -150,10 +247,33 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=DEBUG
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=main_movie_filter_1
+    image: main_movie_filter:latest
+    links:
+    - rabbitmq
+  main_movie_filter_2:
+    container_name: main_movie_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=DEBUG
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=main_movie_filter_2
     image: main_movie_filter:latest
     links:
     - rabbitmq
@@ -170,11 +290,51 @@ services:
     - HEARTBEAT_TIMEOUT=8000
     - ELECTION_TIMEOUT=5000
     - MONITOR_NODE_ID=1
-    - MONITOR_CLUSTER_NODES=monitor_1
-    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,arg_production_filter_1,credits_joiner_1,ratings_joiner_1,main_movie_filter_1,esp_production_filter_1,no_colab_productions_filter_1,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
     ports:
     - 50001:50001
     - 50011:50011
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  monitor_2:
+    build:
+      context: .
+      dockerfile: monitor/monitor_cluster.dockerfile
+    container_name: monitor_2
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_SERVICE_PORT=50002
+    - MONITOR_CLUSTER_PORT=50012
+    - HEARTBEAT_INTERVAL=2000
+    - HEARTBEAT_TIMEOUT=8000
+    - ELECTION_TIMEOUT=5000
+    - MONITOR_NODE_ID=2
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    ports:
+    - 50002:50002
+    - 50012:50012
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  monitor_3:
+    build:
+      context: .
+      dockerfile: monitor/monitor_cluster.dockerfile
+    container_name: monitor_3
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_SERVICE_PORT=50003
+    - MONITOR_CLUSTER_PORT=50013
+    - HEARTBEAT_INTERVAL=2000
+    - HEARTBEAT_TIMEOUT=8000
+    - ELECTION_TIMEOUT=5000
+    - MONITOR_NODE_ID=3
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
+    - EXPECTED_SERVICES=worker,client_decodifier,client_1,twentieth_century_filter_1,twentieth_century_filter_2,arg_production_filter_1,arg_production_filter_2,credits_joiner_1,credits_joiner_2,ratings_joiner_1,ratings_joiner_2,main_movie_filter_1,main_movie_filter_2,esp_production_filter_1,esp_production_filter_2,no_colab_productions_filter_1,no_colab_productions_filter_2,sentiment_filter_1,sentiment_filter_2,twentieth_century_arg_esp_aggregator,twentieth_century_arg_aggregator,top_5_countries_aggregator,top_10_credits_aggregator,best_and_worst_ratings_aggregator
+    ports:
+    - 50003:50003
+    - 50013:50013
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   no_colab_productions_filter:
@@ -185,6 +345,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -192,10 +356,33 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=no_colab_productions_filter_1
+    image: no_colab_productions_filter:latest
+    links:
+    - rabbitmq
+  no_colab_productions_filter_2:
+    container_name: no_colab_productions_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=no_colab_productions_filter_2
     image: no_colab_productions_filter:latest
     links:
     - rabbitmq
@@ -220,6 +407,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -228,11 +419,83 @@ services:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
     - JOINER_INSTANCE_ID=ratings-1
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=ratings_joiner_1
     image: ratings_joiner:latest
+    links:
+    - rabbitmq
+  ratings_joiner_2:
+    container_name: ratings_joiner_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=ratings_joiner_2
+    image: ratings_joiner:latest
+    links:
+    - rabbitmq
+  sentiment_filter:
+    build:
+      context: .
+      dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
+    container_name: sentiment_filter_1
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=sentiment_filter_1
+    image: sentiment_filter:latest
+    links:
+    - rabbitmq
+  sentiment_filter_2:
+    container_name: sentiment_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=sentiment_filter_2
+    image: sentiment_filter:latest
     links:
     - rabbitmq
   top_10_credits_aggregator:
@@ -243,6 +506,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -250,8 +517,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=top_10_credits_aggregator
     links:
@@ -264,6 +531,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -271,8 +542,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=top_5_countries_aggregator
     links:
@@ -285,6 +556,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -292,8 +567,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_arg_aggregator
     links:
@@ -306,6 +581,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -313,8 +592,8 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_arg_esp_aggregator
     links:
@@ -327,6 +606,10 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -334,10 +617,33 @@ services:
     environment:
     - PYTHONUNBUFFERED=1
     - LOG_LEVEL=INFO
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=twentieth_century_filter_1
+    image: twentieth_century_filter:latest
+    links:
+    - rabbitmq
+  twentieth_century_filter_2:
+    container_name: twentieth_century_filter_2
+    depends_on:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - LOG_LEVEL=INFO
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
+    - HEARTBEAT_INTERVAL=2000
+    - SERVICE_NAME=twentieth_century_filter_2
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
@@ -348,9 +654,13 @@ services:
     depends_on:
       monitor_1:
         condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
+        condition: service_started
     environment:
-    - MONITOR_HOSTS=monitor_1
-    - MONITOR_PORTS=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=2000
     - SERVICE_NAME=worker
     image: worker:latest
